--- a/TacoCloud/src/main/resources/application.yaml
+++ b/TacoCloud/src/main/resources/application.yaml
@@ -3,7 +3,7 @@ spring:
     cache: false
   datasource:
     driver-class-name: org.h2.Driver
-    url: jdbc:h2:mem:test
+    url: jdbc:h2:mem:testdb
     username: sa
     password:
   sql:
@@ -16,7 +16,6 @@ spring:
   jpa:
     database: h2
     show-sql: true
-    open-in-view: false
   h2:
     console:
       enabled: true
