--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>TacoCloud</module>
+        <module>doc_mgmt_system</module>
     </modules>
 
     <properties>
